# dbtx

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
lib/: dbt.py  utils.py
tests/: test_cli.py
tests/jaffle_shop_duckdb/: requirements.txt
