[project]
name = "dbtx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0.2", "uv>=0.4.7"]

[project.scripts]
dbtx = "main:dbtx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pyinstrument>=4.7.3", "pytest>=8.3.2", "dbt-duckdb>=1.8.3"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = [".*venv"] # Exclude all venv files by default

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "--color=yes -v"
