[project]
name = "dbtx"
version = "0.0.2"
description = "Cross-platform dbt runner. Python not required."
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
authors = [{ name = "Justin Leder", email = "justin@turntable.so" }]
dependencies = ["pyyaml>=6.0.2", "uv>=0.4.7"]

[project.scripts]
dbtx = "main:dbtx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pyinstrument>=4.7.3", "pytest>=8.3.2", "dbt-duckdb>=1.8.3"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = [".*venv", "tests/"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "--color=yes -v"
